# RayChess

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: RayChess.code-workspace  board_and_pieces.h  chess_computer.c  chess_computer.h  main.c  main.h  move_legal_checker.c  move_legal_checker.h  piece_sprites.h
